资源工具栏支持搜索